fixed spacing on sign up

--- a/static/css/forms.css
+++ b/static/css/forms.css
@@ -171,8 +171,8 @@ h1{
 .signin_input{
     position: relative;
     width: 100%;
-    padding: 2rem 0;
-    maring-top: 0.5rem;
+    padding: 1rem 0;
+    margin-top: 0.5rem;
     border: none;
     outline: none;
     font-size: 1.8 rem;
